[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Tool Shop"
horizontal_alignment = 1

[node name="CoinsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Coins: 0"
horizontal_alignment = 1

[node name="PickaxeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Pickaxe - 500 coins"

[node name="BrushButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Brush - 200 coins"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"
